# NoiseTrack

./: .env.template  README.md  dbconnect.py  docker-compose.yml  live_plot.py  main.py  main_module.py  notificator.py  package-lock.json  package.json  pyproject.toml  report.py  test.py  tests.html  tracker.py
client/: index.html  package-lock.json  package.json
client/public/: index.html  manifest.json
client/src/: App.jsx  index.css
desk/: dev.env  pyproject.toml
desk/desk/: main.py
imagenes/: Visualización.html  Visualizador.html
movil/: .gitignore  pubspec.yaml
movil/lib/: globals.dart  home.dart  login.dart  main.dart  worker_login.dart
movil/linux/: CMakeLists.txt  my_application.cc
movil/test/: widget_test.dart
movil/web/: index.html  manifest.json
movil/windows/: CMakeLists.txt  README.md
public/: electron.js  index.html  manifest.json
server/: app.js  index.js
server/config/: config.js
server/controllers/: auth.js  decibel.js  tasks.js
server/libs/: jwt.js
server/middlewares/: auth.js
server/models/: decibel.js
server/routes/: auth.js  decibel.js  tasks.js
server/schemas/: auth.js
src/: App.css  App.js  index.js
src/api/: alert.js  auth.js  camera.js  image.js  index.js  measurement.js  report.js  user.js  worker.js  workplace.js
src/assets/: index.js  report.html
src/config/: firebase.js  mongodb.js
src/models/: decibels.js  user.js
src/pages/: index.js
src/routes/: LoggedNavigation.js  index.js
src/scss/: colors.scss  global.scss
tracker/: main.py  pyproject.toml
tracker/src/: live_plot.py
(+102 files in other folders)
