[tool.poetry]
name = "noisetrack"
version = "0.1.0"
description = ""
authors = ["Camila Arancibia <camilachillan99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.7.2"
sounddevice = "^0.4.6"
numpy = "^1.25.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
