[tool.poetry]
name = "tracker"
version = "0.1.0"
description = ""
authors = ["Camila Arancibia <camilachillan99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
websockets = "^11.0.3"
sounddevice = "^0.4.6"

[tool.poetry.group.format.dependencies]
black = "^23.7.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
